We now support partial GET. Removed unused classes we use lobcder-master's classes from artifactory